--- a/ABM.Paie/Pages/AbmPaie.razor
+++ b/ABM.Paie/Pages/AbmPaie.razor
@@ -1,13 +1,15 @@
 ﻿@page "/AbmPaie"
 @page "/AbmPaie/{Sub}"
+@using ABM.Paie.Components
 @using ABM.Paie.Enumerations
 @using ABM.Paie.Helpers
+@using ABM.Paie.Models
 @using ABM.Paie.Resources
 @inject NavigationManager NavigationManager
 
 <PageTitle>ABM Paie</PageTitle>
 
-<div style="text-align:justify;margin-bottom:20px;">
+<div class="justify">
     <MudExpansionPanels MultiExpansion="true">
         <MudExpansionPanel Expanded="@IsExpanded(Section.Organigramme)" ExpandedChanged="OrganigrammeExpandedChanged">
             <TitleContent>
@@ -16,9 +18,7 @@
                 </MudText>
             </TitleContent>
             <ChildContent>
-                <div class="center">
-                    <MudImage Fluid="true" Src="/images/ABMq_Organigramme.png" Alt="Organigramme" Class="rounded-1g" />
-                </div>
+                <MudImage Fluid="true" Src="/images/ABMq_Organigramme.png" Alt="Organigramme" Class="rounded-1g" />
             </ChildContent>
         </MudExpansionPanel>
         <MudExpansionPanel Expanded="@IsExpanded(Section.Equipe)" ExpandedChanged="EquipeExpandedChanged">
@@ -28,25 +28,21 @@
                 </MudText>
             </TitleContent>
             <ChildContent>
-                <div class="d-flex flex-column" style="margin-top:20px;">
-                    <MudText Typo="Typo.h6" Style="margin:10px 0 0 0;">Marine</MudText>
+                <div class="d-flex flex-column">
+                    <Paragraph Css="bold">Marine</Paragraph>
                     <MudDivider />
-                    <MudText Class="indigo-text" Style="margin:20px 0 0 0;"><b>Responsable de l'apprentissage et de la connaissance</b></MudText>
-                    <MudText Style="margin:10px 0 0 0;">
+                    <h2>Responsable de l'apprentissage et de la connaissance</h2>
+                    <Paragraph>
                         J'ai la conviction profonde que l'apprentissage est une clé à la réussite, aux avancées personnelles et professionnelles, 
                         et qu'il ne faut cesser d'apprendre !
-                    </MudText>
-                    <MudText Style="margin:10px 0 0 0;">
+                    </Paragraph>
+                    <Paragraph>
                         Ma démarche lors de la création d'ABM Paie a été d'allier mes deux passions, la paie et la formation, 
                         en relevant le défi d'innover l'apprentissage de la paie et du logiciel de paie grâce aux nouvelles technologies actuelles 
                         et à toute l'expérience acquise depuis plus de 8 ans 
-                        et appuyée par l'obtention du diplôme de <i>Chef de projet, Apprentissage et Formation en ligne</i>.
-                    </MudText>
-                    <MudButton Class="indigo-text text-lighten-2" Variant="Variant.Text" 
-                    Href="@(UriHelper.Get(Section.Silae))" 
-                    EndIcon="@Icons.Material.TwoTone.ArrowCircleRight" Style="margin:10px 0 10px 0;text-transform:none;width:fit-content;">
-                        en savoir plus sur mon parcours
-                    </MudButton>
+                        et appuyée par l'obtention du diplôme de <span class="italic">Chef de projet, Apprentissage et Formation en ligne</span>.
+                    </Paragraph>
+                    <LinkButton Link="@(new Link(UriHelper.Get(Section.Silae)))" />
                 </div>
             </ChildContent>
         </MudExpansionPanel>
@@ -57,22 +53,16 @@
                 </MudText>
             </TitleContent>
             <ChildContent>
-                <div class="d-flex flex-column" style="margin-top:20px;">
-                    <MudText Style="margin:10px 0 0 0;">
+                <div class="d-flex flex-column">
+                    <Paragraph>
                         Pour toutes demandes relatives à une assistance technique pour pédagogique, je suis à votre écoute à l'adresse  :
-                    </MudText>
-                    <MudButton Variant="Variant.Text" Style="margin:10px 0 10px 0;text-transform:none;width:fit-content;">
-                        <a href="mailto:assistance-technique-pedagogique@abmq.fr">assistance-technique-pedagogique@abmq.fr</a>
-                    </MudButton>
-
-                    <MudText Style="margin:20px 0 0 0;">
-                        2024-2025 : Étudiante au CAFEL, <i>Chef de projet, Formation et Apprentissage en ligne</i> (Bac+4)
-                    </MudText>
-                    <MudButton Class="indigo-text text-lighten-2" Variant="Variant.Text" 
-                    Href="@(UriHelper.Get(Section.Cafel))" 
-                    EndIcon="@Icons.Material.TwoTone.ArrowCircleRight" Style="margin:10px 0 10px 0;text-transform:none;width:fit-content;">
-                        en savoir plus sur mon projet CAFEL
-                    </MudButton>
+                    </Paragraph>
+                    <MailButton Link="@(new Link("mailto:assistance-technique-pedagogique@abmq.fr", "assistance-technique-pedagogique@abmq.fr"))" />
+                    
+                    <Paragraph>
+                        2024-2025 : Étudiante au CAFEL, <span class="italic">Chef de projet, Formation et Apprentissage en ligne</span> (Bac+4)
+                    </Paragraph>
+                    <LinkButton Link="@(new Link(UriHelper.Get(Section.Cafel), "en savoir plus sur mon projet CAFEL"))" />
                 </div>
             </ChildContent>
         </MudExpansionPanel>
@@ -83,32 +73,26 @@
                 </MudText>
             </TitleContent>
             <ChildContent>
-                <div class="d-flex flex-column" style="margin-top:20px;">
-                    <MudText Style="margin:10px 0 0 0;">
+                <div class="d-flex flex-column">
+                    <Paragraph>
                         Pour toutes demandes relatives à un handicap, je suis à votre écoute à l'adresse  :
-                    </MudText>
-                    <MudButton Variant="Variant.Text" Style="margin:10px 0 10px 0;text-transform:none;width:fit-content;">
-                        <a href="mailto:referent-handicap@abmq.fr">referent-handicap@abmq.fr</a>
-                    </MudButton>
+                    </Paragraph>
+                    <MailButton Link="@(new Link("mailto:referent-handicap@abmq.fr", "referent-handicap@abmq.fr"))" />
 
-                    <MudText Style="margin:20px 0 0 0;">
-                        30 novembre 2024 : Formation, <i>Sensibilisation des référents handicap OF/CFA</i> (2h E-learning)
-                    </MudText>
-                    <MudButton Class="indigo-text text-lighten-2" Variant="Variant.Text" 
-                    Href="/resources/ABMq_Attestation_Sensibilisation_Handicap_2024-11-30.pdf" Target="@Constants.Blank"
-                    EndIcon="@Icons.Material.TwoTone.ArrowCircleRight" Style="margin:10px 0 10px 0;text-transform:none;width:fit-content;">
-                        visualiser mon attestation de réalisation
-                    </MudButton>
-                    <MudText>
+                    <Paragraph>
+                        30 novembre 2024 : Formation, <span class="italic">Sensibilisation des référents handicap OF/CFA</span> (2h E-learning)
+                    </Paragraph>
+                    <LinkButton Link="@(new Link("/resources/ABMq_Attestation_Sensibilisation_Handicap_2024-11-30.pdf", "visualiser mon attestation de réalisation", true))" />
+                    <Paragraph>
                         Cette formation se compose de deux autres modules programmés pour 2025 :
-                    </MudText>
-                    <div class="d-flex flex-wrap" style="margin:10px 0 20px 0">
-                        <MudDivider Vertical="true" FlexItem="true" Style="margin:0px 20px;" />
-                        <MudText>
-                            <i>Devenir Référent handicap</i>
-                            <br />
-                            <i>Troubles cognitifs</i>
-                        </MudText>
+                    </Paragraph>
+                    <div class="d-flex flex-wrap">
+                        <MudDivider Vertical="true" FlexItem="true" />
+                            <Paragraph Css="italic">
+                                Devenir Référent handicap
+                                <br />
+                                Troubles cognitifs
+                            </Paragraph>
                     </div>
                 </div>
             </ChildContent>
@@ -120,11 +104,9 @@
                 </MudText>
             </TitleContent>
             <ChildContent>
-                <div class="center flex-column" style="margin:20px;">
-                    <MudText Class="indigo-text" Typo="Typo.h5" Style="margin:10px 0">
-                        <b>ABM Paie, c'est</b>
-                    </MudText>
-                    <MudText Typo="Typo.h5">Satisfaction : 95 %</MudText>
+                <div class="center flex-column">
+                    <h2>ABM Paie, c'est</h2>
+                    <Paragraph>Satisfaction : 95 %</Paragraph>
                 </div>
             </ChildContent>
         </MudExpansionPanel>
@@ -135,61 +117,61 @@
                 </MudText>
             </TitleContent>
             <ChildContent>
-                <div class="d-flex flex-column" style="margin-top:20px;">
-                    <MudText Class="indigo-text" Typo="Typo.h6" Style="margin:10px 0 0 0;">
+                <div class="d-flex flex-column">
+                    <h2>
                         La qualité
-                    </MudText>
-                    <MudText Style="margin:10px 0 20px 0;">
-                        Mon catalogue de formation ne reflète pas toutes mes connaissances sur le logiciel MySilae. 
+                    </h2>
+                    <Paragraph>
+                        Mon catalogue de formation ne reflète pas toutes mes connaissances sur le logiciel My Silae. 
                         Ma priorité est avant tout de délivrer des formations de qualité, tant dans le contenu que dans la forme, 
                         dans la veille technique que dans la mise à jour continue des supports. 
                         C'est pourquoi, de nouvelles formations sont en préparation 
                         mais pour une qualité de pédagogie ne seront visibles que lorsque tous les critères de qualité seront validés.
-                    </MudText>
-                    <MudText Class="indigo-text" Typo="Typo.h6" Style="margin:10px 0 0 0;">
+                    </Paragraph>
+                    <h2>
                         Le respect
-                    </MudText>
-                    <MudText Style="margin:10px 0 0 0;">
+                    </h2>
+                    <Paragraph>
                         Je mets un point d'honneur sur cette valeur.
-                    </MudText>
-                    <MudText Style="margin:10px 0;">
+                    </Paragraph>
+                    <Paragraph>
                         J'ai un grand respect pour tous mes anciens collègue Silae toujours au service des clients 
                         et à l'amélioration continue du produit paie. 
                         Je partage cet amour du produit à votre service par la transmission de tout mon savoir et de ma passion pour ce logiciel de paie.
-                    </MudText>
-                    <MudText Style="margin:0 0 20px 0;">
+                    </Paragraph>
+                    <Paragraph>
                         Je décline également cette valeur dans mon métier et au sein d'ABM Paie. 
                         Nos échanges ainsi que les formations doivent se faire dans l'écoute, la bienveillance et le respect mutuel.
-                    </MudText>
-                    <MudText Class="indigo-text" Typo="Typo.h6" Style="margin:10px 0 0 0;">
+                    </Paragraph>
+                    <h2>
                         L'Animation
-                    </MudText>
-                    <MudText Style="margin:10px 0 20px 0;">
+                    </h2>
+                    <Paragraph>
                         Animer, ou insuffler de l'âme, 
                         j'ai à cœur que les moments passés en formation se fassent dans la joie, le plaisir et la bonne humeur, 
                         pour une assimilation de connaissance réussie.
-                    </MudText>
-                    <MudText Class="indigo-text" Typo="Typo.h6" Style="margin:10px 0 0 0;">
+                    </Paragraph>
+                    <h2>
                         L'Originalité
-                    </MudText>
-                    <MudText Style="margin:10px 0 20px 0;">
+                    </h2>
+                    <Paragraph>
                         J'ai la volonté de rendre mes formations originales par leur fil conducteur, leur thème et leurs formats divers et complets 
                         (nombreux exemples de bulletins).
-                    </MudText>
-                    <MudText Class="indigo-text" Typo="Typo.h6" Style="margin:10px 0 0 0;">
+                    </Paragraph>
+                    <h2>
                         La Curiosité
-                    </MudText>
-                    <MudText Style="margin:10px 0;">
-                        Un de mes objectifs est de vous rendre curieux sur le logiciel MySilae. 
+                    </h2>
+                    <Paragraph>
+                        Un de mes objectifs est de vous rendre curieux sur le logiciel My Silae. 
                         J'ai le souhait de réussir à vous transmettre le sentiment de magie que j'éprouve à découvrir toutes les facettes de la paie 
                         grâce à la puissance du logiciel.
-                    </MudText>
-                    <MudText Style="margin:0 0 20px 0;">
+                    </Paragraph>
+                    <Paragraph>
                         Cette curiosité fait partie de moi, elle nourrit mon désir de création de nouvelles formations 
                         mais me pousse également dans mon quotidien. 
                         Cela s'est traduit par ma volonté de retourner sur les bancs de la fac en m'étant inscrite à la formation CAFEL 
                         pour découvrir de nouveaux logiciels de conception de digital formation.
-                    </MudText>
+                    </Paragraph>
                 </div>
             </ChildContent>
         </MudExpansionPanel>
