--- a/ABM.Paie/Pages/Actualite.razor
+++ b/ABM.Paie/Pages/Actualite.razor
@@ -1,20 +1,23 @@
 ﻿@page "/Actualite"
+@using ABM.Paie.Components
+@using ABM.Paie.Models
 @using ABM.Paie.Resources
 
 <PageTitle>ABM Paie - Actualités</PageTitle>
 
-<MudText Class="indigo-text" Typo="Typo.h5" Style="margin:50px 20px 0 20px"><b>Nouveautés</b></MudText>
+<h1>Nouveautés</h1>
 
-<MudPaper Class="indigo lighten-4 indigo-text d-flex flex-column" Style="padding:30px 20px;margin:20px 0;">
-    <MudText Class="white-text" Typo="Typo.h5" Style="margin:20px 0;">Décembre 2024 :</MudText>
-    <MudText Typo="Typo.h5">La formation <i style="white-space:nowrap;">Absences en heures mensualisées</i>.</MudText>
-    <MudText Typo="Typo.h6" Style="margin:20px 0;text-align:justify">
-        Cette formation pointue détaille toutes les subtilités du retrait des absences dans le logiciel MySilae
-        selon les méthodes réelles ou moyennes en heures ou en calendaire.<br />
-        <MudButton Class="white-text" Variant="Variant.Text"
-                   Href="https://abmformation.catalogueformpro.com" Target="@Constants.Blank" 
-                   EndIcon="@Icons.Material.TwoTone.ArrowCircleRight" Style="text-transform:none;">
-            voir le catalogue en ligne
-        </MudButton>
-    </MudText>
-</MudPaper>
+<div class="secondary-dark white-text d-flex flex-column justify">
+    <Paragraph Css="bold">Décembre 2024 :</Paragraph>
+    <Paragraph Css="huge">La formation <span class="italic">Absences en heures mensualisées</span>.</Paragraph>
+    <div class="d-flex flex-column-2">
+        <img src="/images/formations/ABMq_Absences.jpg" alt="Absences en heures mensualisées" width="200" />
+        <div >
+            <Paragraph>
+                Cette formation pointue détaille toutes les subtilités du retrait des absences dans le logiciel My Silae
+                selon les méthodes réelles ou moyennes en heures ou en calendaire.
+            </Paragraph>
+            <LinkButton Link="@(new Link("https://abmformation.catalogueformpro.com", "voir le catalogue en ligne", true, css: "white-text"))" />
+        </div>
+    </div>
+</div>
